tests/miniJava/neg/001555_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = new return [ 0 ] ; } }
